# Frontier-exploration-and-SLAM-with-P3AT

./: .gitattributes  .github_quick_reference  .gitignore  CONTRIBUTING.md  GIT_QUICK_START.md  GIT_SETUP.md  GIT_SETUP_COMPLETE.md  LICENSE  README.md  git-init.bat  git-init.ps1  git-init.sh
odev2/: CMakeLists.txt  OPTIMIZATION_NOTES.md  QUICK_REFERENCE.md  package.xml
odev2/launch/: exploration.launch
odev2/nav_params/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
odev2/rviz/: odev2.rviz
odev2/scripts/: keyboard.py  qr.py
odev2/src/: barrel_with_timer  best_frontier_so_far_(recover_manuver).txt  explore.cpp  hazmat_detector.cpp  object_detector.cpp  qr_detector.cpp
odev2/src/HSV_detect/: hsv_detection.py
pioneer3at_demo/p3at_description/urdf/: normal_camera.urdf.xacro  pioneer3at_body.xacro
